--- a/src/playground/crop_movie.ipynb
+++ b/src/playground/crop_movie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,11 +15,11 @@
     "    fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
     "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
     "    total_duration = total_frames / fps\n",
-    "    duration_sec = duration * 60\n",
+    "    duration_sec = duration\n",
     "    recoding_frames = int(duration_sec * fps)  # Ensure it's an integer\n",
     "\n",
     "    if position == \"b\":\n",
-    "        start_frame = 4000\n",
+    "        start_frame = 0\n",
     "    elif position == \"m\":\n",
     "        start_frame = int((total_duration / 2 - duration_sec / 2) * fps)\n",
     "    elif position == \"e\":\n",
@@ -55,21 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cropped video saved as /home/bohbot/Evyatar/exp/Joni_showoff/nectar/full movies/2024-01-29_16-22-42_cam1_cropped_b.mp4\n"
+      "Cropped video saved as /home/wildmosquit0/workspace/data/images/Joni_reptilians/IMG_1870_cropped_b.mp4\n"
      ]
     }
    ],
    "source": [
-    "input_file = \"/home/bohbot/Evyatar/exp/Joni_showoff/nectar/full movies/2024-01-29_16-22-42_cam1.mp4\"\n",
+    "input_file = \"/home/wildmosquit0/workspace/data/images/Joni_reptilians/IMG_1870.MOV\"\n",
     "position = \"b\"  # Choose from 'b','m', or 'e'\n",
-    "duration = 5  # Duration in minutes\n",
+    "duration = 10  # Duration in minutes\n",
     "crop_video(input_file, position, duration)"
    ]
   },
@@ -114,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "super_model",
+   "display_name": "sp39",
    "language": "python",
    "name": "python3"
   },
@@ -128,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
