--- a/src/playground/slicing.ipynb
+++ b/src/playground/slicing.ipynb
@@ -2701,7 +2701,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "super_model",
+   "display_name": "sp39",
    "language": "python",
    "name": "python3"
   },
@@ -2715,7 +2715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
