added circle roi

--- a/src/playground/crop_movie.ipynb
+++ b/src/playground/crop_movie.ipynb
@@ -15,11 +15,11 @@
     "    fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
     "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
     "    total_duration = total_frames / fps\n",
-    "    duration_sec = duration\n",
+    "    duration_sec = duration * fps *60\n",
     "    recoding_frames = int(duration_sec * fps)  # Ensure it's an integer\n",
     "\n",
     "    if position == \"b\":\n",
-    "        start_frame = 0\n",
+    "        start_frame = fps*60*10\n",
     "    elif position == \"m\":\n",
     "        start_frame = int((total_duration / 2 - duration_sec / 2) * fps)\n",
     "    elif position == \"e\":\n",
@@ -62,14 +62,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cropped video saved as /home/wildmosquit0/workspace/data/images/Joni_reptilians/IMG_1870_cropped_b.mp4\n"
+      "Cropped video saved as /home/wildmosquit0/workspace/projects/Neta/Nectar/albo_de5ml_rep1_cropped_b.mp4\n"
      ]
     }
    ],
    "source": [
-    "input_file = \"/home/wildmosquit0/workspace/data/images/Joni_reptilians/IMG_1870.MOV\"\n",
+    "input_file = \"/home/wildmosquit0/workspace/projects/Neta/Nectar/albo_de5ml_rep1.mp4\"\n",
     "position = \"b\"  # Choose from 'b','m', or 'e'\n",
-    "duration = 10  # Duration in minutes\n",
+    "duration = 120  # Duration in minutes\n",
     "crop_video(input_file, position, duration)"
    ]
   },
