changed movie crooping

--- a/src/playground/crop_640X640_frame.ipynb
+++ b/src/playground/crop_640X640_frame.ipynb
@@ -154,73 +154,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Select a ROI and then press SPACE or ENTER button!\n",
-      "Cancel the selection process by pressing c button!\n",
-      "Cropped video saved at: /home/bohbot/Evyatar/exp/Joni_showoff/nectar/joni_640.mp4\n"
+      "Cropped 640x640 video saved to: /home/bohbot/workspace/images/Gleb/v_cropped.mp4\n"
      ]
     }
    ],
    "source": [
     "import cv2\n",
     "\n",
-    "def crop_video(input_path, output_path):\n",
-    "    # Open the video\n",
-    "    cap = cv2.VideoCapture(input_path)\n",
+    "def get_reference_frame(cap, option=\"first\"):\n",
+    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "    if option == \"first\":\n",
+    "        cap.set(cv2.CAP_PROP_POS_FRAMES, 0)\n",
+    "    elif option == \"middle\":\n",
+    "        cap.set(cv2.CAP_PROP_POS_FRAMES, total_frames // 2)\n",
+    "    elif option == \"last\":\n",
+    "        cap.set(cv2.CAP_PROP_POS_FRAMES, total_frames - 1)\n",
+    "    else:\n",
+    "        raise ValueError(\"reference_frame must be 'first', 'middle', or 'last'\")\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        raise RuntimeError(\"Failed to read the reference frame.\")\n",
+    "    return frame\n",
     "\n",
+    "def get_crop_coordinates(frame, crop_size=640):\n",
+    "    clone = frame.copy()\n",
+    "    coords = []\n",
+    "\n",
+    "    def click_event(event, x, y, flags, param):\n",
+    "        if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "            # Top-left corner of crop box\n",
+    "            coords.clear()\n",
+    "            coords.append((x, y))\n",
+    "            # Draw 640x640 rectangle\n",
+    "            rect_frame = clone.copy()\n",
+    "            cv2.rectangle(rect_frame, (x, y), (x + crop_size, y + crop_size), (0, 255, 0), 2)\n",
+    "            cv2.imshow(\"Select Top-Left Corner\", rect_frame)\n",
+    "\n",
+    "    cv2.imshow(\"Select Top-Left Corner\", clone)\n",
+    "    cv2.setMouseCallback(\"Select Top-Left Corner\", click_event)\n",
+    "    cv2.waitKey(0)\n",
+    "    cv2.destroyAllWindows()\n",
+    "\n",
+    "    if not coords:\n",
+    "        raise RuntimeError(\"No coordinates selected.\")\n",
+    "    \n",
+    "    x, y = coords[0]\n",
+    "    return x, y\n",
+    "\n",
+    "def crop_video(input_path, output_path, reference_frame=\"first\", crop_size=640):\n",
+    "    cap = cv2.VideoCapture(input_path)\n",
     "    if not cap.isOpened():\n",
     "        print(\"Error: Could not open video.\")\n",
     "        return\n",
     "\n",
-    "    # Read the first frame to select ROI\n",
-    "    ret, frame = cap.read()\n",
-    "    if not ret:\n",
-    "        print(\"Error: Could not read the first frame.\")\n",
+    "    # Get the frame for selecting crop region\n",
+    "    try:\n",
+    "        ref_frame = get_reference_frame(cap, reference_frame)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
     "        return\n",
     "\n",
-    "    # Let the user draw a rectangular ROI on the first frame\n",
-    "    # selectROI returns (x, y, w, h)\n",
-    "    r = cv2.selectROI(\"Select Crop Region\", frame, fromCenter=False, showCrosshair=True)\n",
-    "    cv2.destroyWindow(\"Select Crop Region\")\n",
+    "    h_frame, w_frame = ref_frame.shape[:2]\n",
+    "    x, y = get_crop_coordinates(ref_frame, crop_size)\n",
     "\n",
-    "    x, y, w, h = r\n",
+    "    # Ensure the crop area is within bounds\n",
+    "    if x + crop_size > w_frame or y + crop_size > h_frame:\n",
+    "        print(\"Error: Crop area exceeds frame dimensions.\")\n",
+    "        return\n",
     "\n",
-    "    # Get video parameters\n",
+    "    # Prepare video writer\n",
     "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
-    "    # FourCC is a 4-byte code used to specify the video codec\n",
-    "    fourcc = cv2.VideoWriter_fourcc(*\"mp4v\")  # or 'XVID', 'AVC1', etc.\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*\"mp4v\")\n",
+    "    out = cv2.VideoWriter(output_path, fourcc, fps, (crop_size, crop_size))\n",
     "\n",
-    "    # Create a VideoWriter to write the cropped frames\n",
-    "    out = cv2.VideoWriter(output_path, fourcc, fps, (w, h))\n",
+    "    # Reset to start of video\n",
+    "    cap.set(cv2.CAP_PROP_POS_FRAMES, 0)\n",
     "\n",
-    "    # Process the already-read first frame\n",
-    "    cropped_first_frame = frame[y:y+h, x:x+w]\n",
-    "    out.write(cropped_first_frame)\n",
-    "\n",
-    "    # Loop over the rest of the frames\n",
     "    while True:\n",
     "        ret, frame = cap.read()\n",
     "        if not ret:\n",
     "            break\n",
-    "\n",
-    "        cropped_frame = frame[y:y+h, x:x+w]\n",
+    "        cropped_frame = frame[y:y+crop_size, x:x+crop_size]\n",
     "        out.write(cropped_frame)\n",
     "\n",
-    "    # Release everything\n",
     "    cap.release()\n",
     "    out.release()\n",
-    "    print(f\"Cropped video saved at: {output_path}\")\n",
+    "    print(f\"Cropped 640x640 video saved to: {output_path}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    input_video = \"/home/bohbot/Evyatar/exp/Joni_showoff/nectar/joni.mp4\"\n",
-    "    output_video = \"/home/bohbot/Evyatar/exp/Joni_showoff/nectar/joni_640.mp4\"\n",
-    "    crop_video(input_video, output_video)\n"
+    "    input_video = \"/home/bohbot/workspace/images/Gleb/video6035330113543870789.mp4\"\n",
+    "    output_video = \"/home/bohbot/workspace/images/Gleb/v_cropped.mp4\"\n",
+    "    crop_video(input_video, output_video, reference_frame=\"middle\")\n"
    ]
   },
   {
@@ -249,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
