--- a/src/playground/crop_movie.ipynb
+++ b/src/playground/crop_movie.ipynb
@@ -114,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sp39",
+   "display_name": "super_model",
    "language": "python",
    "name": "python3"
   },
@@ -128,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
