--- a/src/playground/test_for_different_models.ipynb
+++ b/src/playground/test_for_different_models.ipynb
@@ -836,7 +836,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sp39",
+   "display_name": "super_model",
    "language": "python",
    "name": "python3"
   },
@@ -850,7 +850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
