--- a/src/playground/play_dis.ipynb
+++ b/src/playground/play_dis.ipynb
@@ -110,10 +110,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done: /home/bohbot/workspace/images/albo_date/24_2025-05-14_10-14-56_cam2.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "def retimestamp_to_24fps(input_path, output_path, output_fps=24):\n",
+    "    cap = cv2.VideoCapture(input_path)\n",
+    "    if not cap.isOpened():\n",
+    "        raise IOError(\"Could not open input video\")\n",
+    "\n",
+    "    width  = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "    height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+    "    out = cv2.VideoWriter(output_path, fourcc, output_fps, (width, height))\n",
+    "\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "        out.write(frame)  # write each source frame once\n",
+    "\n",
+    "    cap.release()\n",
+    "    out.release()\n",
+    "    print(f\"Done: {output_path}\")\n",
+    "\n",
+    "# Example:\n",
+    "# 3 → 24 fps (8× speed-up)\n",
+    "retimestamp_to_24fps(\"/home/bohbot/workspace/images/albo_date/2025-05-14_10-14-56_cam2.mp4\", \"/home/bohbot/workspace/images/albo_date/24_2025-05-14_10-14-56_cam2.mp4\", output_fps=24)\n"
+   ]
   }
  ],
  "metadata": {
